src/test/deca/context/valid/assign_same_class.deca
/*
    Description : Assignation d'une classe déclarée

    Résultat : OK
*/
class A{}

class B{
    A p = new A();
}
