src/test/deca/context/invalid/if_class_cast.deca
/*
    Description : Utilisation d'un conversion de classe au sein d'un if

    Résultat: Erreur contextuelle (deca:9:8)
*/
class A{}
{
    int x;
    A b = new A();
    if ((Object)(b)){
        x = 2;
    }
}
